adjusting some spacing issues #218

--- a/app/http/public/style.css
+++ b/app/http/public/style.css
@@ -5,6 +5,20 @@
 
 /* Global things like fonts go here */
 
+@media (max-width: 767px) {
+  body {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  
+  .span5 {
+    padding-left:20px;
+    padding-right:20px;
+  }
+}
+
+
+
 @font-face {
   font-family: openSansRegular;
   src: url('fonts/OpenSans-Regular.ttf');
